z-index and text selection fixes

--- a/css/src/_bottombar.scss
+++ b/css/src/_bottombar.scss
@@ -7,7 +7,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 10000;
+	z-index: 100200;
 	width: 100%;
 	height: 50px;
 	padding: 10px 3%;
@@ -15,6 +15,7 @@
 	color: $color-white;
 	box-sizing: border-box;
 	transform: translatez(0);
+	user-select: none;
 }
 
 #user-feedback-bar-steps {
