--- a/css/src/_buttons.scss
+++ b/css/src/_buttons.scss
@@ -80,7 +80,7 @@
 	position: fixed;
 	bottom: -3px;
 	right: 60px;
-	z-index: 40000;
+	z-index: 100000;
 	cursor: pointer;
 
 	&:hover {
